--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -6,6 +6,10 @@
   <title>Content Manager</title>
   <!-- netlify cms login -->
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <script src="https://unpkg.com/netlify-cms-widget-uuid@0.0.9/dist/netlify-cms-widget-uuid.js"></script>
+  <script type="text/javascript">
+    CMS.registerWidget('uuid', NetlifyCmsWidgetUuid.UuidControl, NetlifyCmsWidgetUuid.UuidPreview);
+  </script> 
 </head>
 <body>
   <!-- Include the script that builds the page and powers Netlify CMS -->
