--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -12,9 +12,8 @@
   <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   <script src="https://unpkg.com/netlify-cms-widget-uuid@0.0.9/dist/netlify-cms-widget-uuid.js"></script>
   <script type="text/javascript">
-  setTimeout(
+    console.log('CMS', CMS)
     CMS.registerWidget('uuid', NetlifyCmsWidgetUuid.UuidControl, NetlifyCmsWidgetUuid.UuidPreview)
-    ,1000);
   </script> 
 </body>
 </html>
